--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "wordtoon",
   "version": "1.0.0",
   "main": "index.js",
- "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-},
-
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,5 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
+  },
+  "devDependencies": {
+    "vite": "^6.3.5"
   }
 }
